updates since march

--- a/resume.tex
+++ b/resume.tex
@@ -58,7 +58,7 @@ Sweden
 \\
 I have since picking up Chinese been having a great interest in language no matter what area. When the academic language studies concluded in Shanghai 2011, I naturally chose to continue within the area of computational linguistics, which has been the main topic of studies for these past four years.
 
-I wrote my Bachelor's thesis on using compositions of distributional semantic vectors in sentiment classification. Next semester, for my Master's thesis, I intend to continue to work on distributed representations.
+I wrote my Bachelor's thesis on using compositions of continuous semantic representations in sentiment classification. This semester I'm working on my Master's thesis in discourse parsing, exploring the effects of various neural network architectures on discourse sense classification.
 
 Please see my Github page for a portfolio of code projects: \href{https://github.com/jimmycallin}{github.com/jimmycallin}
 \end{multicols}
@@ -74,9 +74,9 @@ Please see my Github page for a portfolio of code projects: \href{https://github
   \headedsubsection
     {Support Manager \& Editor}
     {Jun. 2012 -- Jun. 2015}
-    {\bodytext{Gavagai is a Stockholm start-up specializing in big data text analytics, involving some of Sweden's foremost experts within the area. My day-to-day work 
+    {\bodytext{Gavagai is a Stockholm start-up specializing in big data text analytics, involving some of Sweden's foremost experts within the area. My day-to-day work
     concerned being responsible for technical support, where I was an essential part in building a support process which assured that customers' technical inquiry were dealt with in a transparent and efficient manner.
-    
+
 I curated and constructed targets of interest in various languages and key domains for business intelligence use. I have also developed several internal tools for data analysis, with work in web development, general programming and various natural language processing areas such as automatic sentiment analysis evaluation, Chinese word segmentation, tokenization and transliteration.}}
 }
 
@@ -106,17 +106,17 @@ I curated and constructed targets of interest in various languages and key domai
 \headedsection
   {\href{http://www.uu.se/en/}{Uppsala University}}
   {\textsc{Uppsala, Sweden}} {%
-  
+
   \headedsubsection
     {Master's degree in Language Technology}
     {Aug. 2014 -- Jun. 2016}
     {\bodytext{Continuing my efforts in natural language processing, this time with a greater focus on research projects.}}
-  
+
   \headedsubsection
     {Bachelor's degree in Language Technology}
     {Aug. 2011 -- Jun. 2014}
     {\bodytext{Focused on using applied computer science for modeling natural languages. Elective courses were concentrated on mathematics and statistics.}}
-    
+
 }
 
 \headedsection
