--- a/resume.tex
+++ b/resume.tex
@@ -41,13 +41,11 @@
 % \sbull is a spaced bullet
 % \href well..
 % \\ breaks the line into a new paragraph
-\noindent\href{mailto:jimmy.callin@gmail.com}{jimmy.callin@gmail.com}\sbull
-\textsmaller{+}46 70 540 45 14 \sbull
-\textsmaller{+}1 (669) 264 1677
-\\
-Sisjövägen 251\sbull
-436 38\thinspace {\large}\sbull
-Askim\sbull
+\noindent\href{mailto:jimmy.callin@gmail.com}{jimmy@callin.cc}\sbull
+\textsmaller{+}46 769 40 30 40 \sbull
+Åkerbladsgatan 6\sbull
+121 45\thinspace {\large}
+Johanneshov\sbull
 Sweden
 
 \spacedhrule{0.9em}{-0.4em}  % a horizontal line with some vertical spacing before and after
@@ -56,11 +54,11 @@ Sweden
 
 \vspace{-0.4em}  % some vertical spacing
 \begin{multicols}{2}  % open a multicolumn environment
-\noindent \emph{An ambitious and curious student who just wrapped up his Master's degree in Language Technology and is currently working as a language engineering contractor for Apple in California.}
-\\
-After concluding my Chinese studies I looked for ways to combine my love for language learning with my interests in computer science, and found a small academic program called language technology. As I started learning about natural language processing, machine learning, and artificial intelligence, so did the world. I am now look for opportunities to apply my skills within these areas in a real-world setting.
+\noindent \emph{A dedicated and light-hearted software developer who loves to get things done and make teams thrive.}
 
-My \href{http://stp.lingfil.uu.se/exarb/master/callin2017.pdf}{Master's thesis} focused on evaluating various word embeddings and machine learning models for use in shallow discourse parsing. Please see my Github page for a portfolio of code projects: \href{https://github.com/jimmycallin}{github.com/jimmycallin}
+I love taking on big problems head on – nothing is too big to be broken into manageable parts. The less I know about the problem, the more for me to learn.
+
+With me on your team you can expect an optimistic and fun atmosphere along with good forward momentum.
 \end{multicols}
 
 
@@ -69,23 +67,55 @@ My \href{http://stp.lingfil.uu.se/exarb/master/callin2017.pdf}{Master's thesis} 
 \roottitle{Experience}
 
 \headedsection  % sets the header for the section and includes any subsections
-  {\href{https://apple.com}{Apple Inc.}}
+  {\href{https://backlight.co}{Backlight}}
+  {\textsc{Stockholm, Sweden}} {%
+  \headedsubsection
+    {Senior Full-Stack Developer}
+    {May. 2021 -- }
+{\bodytext{I joined the Academy Award winning \emph{ftrack} working on collaboration tools for the film industry. In January 2023, ftrack merged into Backlight and became part of a global media technology company.
+
+When I started at ftrack, I found a development team with a successful platform with growing pains. Over time I have helped identify and solve several key issues in the product and development process to make sure the product can continue to thrive and scale. 
+
+My role has widely shifted between development infrastructure and product development. In general, I have enjoyed helping our teams thrive by providing the right solutions and processes to tackle hard problems in manageable chunks.
+
+\emph{Key technologies: TypeScript, Python, Docker, React, GitHub Actions, Webpack}}}
+}
+
+
+\headedsection  % sets the header for the section and includes any subsections
+  {\href{https://bonniernews.se}{Bonnier News}}
+  {\textsc{Stockholm, Sweden}} {%
+  \headedsubsection
+    {Software Developer \& Lead Developer}
+    {Oct. 2017 -- May. 2021}
+{\bodytext{I have had the opportunity to help contribute to a diverse set of areas from building editorial tools that streamline workflows of journalists, to reinventing the core backend of one of the most visited news sites in Sweden. In the process I have worked with a large variety of technologies, from web platforms written in React and Javascript, to modern microservice architectures in a Kubernetes environment. I was a key player in finally completing a troubled multi-year project of replacing an old complex monolith CMS with new set of tools built on a modern microservice architecture. 
+
+From Sept. 2020 I became Lead Developer, taking on larger technical strategic projects and lead the cross-team development of a long-term technical backend architecture that significantly reduced the technical debt and better aligned with the organization’s technical vision.
+
+\emph{Key technologies: TDD, Node.js, React, Python, Machine Learning, Elasticsearch, Redis, Kubernetes (Openshift)}
+}}
+}
+
+\headedsection  % sets the header for the section and includes any subsections
+  {\href{https://apple.com}{Apple}}
   {\textsc{Cupertino, California}} {%
   \headedsubsection
     {Siri Language Engineer}
     {Mar. 2016 -- Oct. 2016, May 2017 -- Sept. 2017}
-{\bodytext{I spent six months in in Cupertino and Paris as a Siri Language Engineering Contractor for the Swedish localization team, working on improving the user experience of the Swedish version of Siri through bug fixing and new feature implementation. Despite my limited time I quickly became an integrated part of the team and took on responsibilities usually reserved for full-time employees. After finishing my Master's thesis I returned for another four months of work.}}
+{\bodytext{I spent six months in in Cupertino and Paris as a Siri Language Engineering Contractor for the Swedish localization team, working on improving the user experience of the Swedish Siri. Despite my limited time I quickly became an integrated part of the team and took on responsibilities usually reserved for full-time employees. After finishing my Master's thesis I returned for another four months of work.
+
+\emph{Key technologies: Python, Machine Learning, a lot of secret internal tools}}}
 }
 
 \headedsection  % sets the header for the section and includes any subsections
-  {\href{http://gavagai.se}{Gavagai AB}}
+  {\href{http://gavagai.se}{Gavagai}}
   {\textsc{Stockholm, Sweden}} {%
   \headedsubsection
     {Support Manager \& Editor}
     {Jun. 2012 -- Jun. 2015}
-    {\bodytext{Gavagai is a Stockholm start-up specializing in big data text analytics, involving some of Sweden's foremost experts within the area. My day-to-day work concerned being responsible for technical support, where I was an essential part in building a support process which assured that customers' technical inquiry were dealt with in a transparent and efficient manner.
-
-I curated and constructed targets of interest in various languages and key domains for business intelligence use. I have also developed several internal tools for data analysis, with work in web development, general programming and various natural language processing areas such as automatic sentiment analysis evaluation, Chinese word segmentation, tokenization and transliteration.}}
+    {\bodytext{Gavagai is an AI startup building text analytics tools for customer insights. I was responsible for technical support, where I built a support process that assured customers' technical inquiry were dealt with in a transparent and efficient manner. I also developed several internal tools for data analysis, with work in web development and various natural language processing areas such as sentiment analysis.
+    
+    \emph{Key technologies: Python, Java, Machine Learning, Regular Expressions}}}
 }
 
 
@@ -136,13 +166,11 @@ I curated and constructed targets of interest in various languages and key domai
 
 \inlineheadsection  % special section that has an inline header with a 'hanging' paragraph
   {Technical expertise:}
-  {Codes daily in Python and occasionally in Java. Experience with Javascript, Matlab, C(++), Ruby, and SML.}
+  {Codes daily in Python and TypeScript. Enjoys CI/CD, TDD, Redis, Elasticsearch, React, Docker, build tools, and learning new technologies}
 
 \vspace{0.5em}
 \inlineheadsection
   {Communication skills:}
-  {Swedish \emph{(native language)}, English \emph{(full professional proficiency)}, \\Chinese \emph{(limited working proficiency)}.}
+  {Swedish \emph{(native language)}, English \emph{(full professional proficiency)}.}
 
 \end{document}
-
-＀
